# PandaApplications

./: .gitignore  CMakeLists.txt  README.md
0-test/: CMakeLists.txt  world.urdf
00-1dof_passivity/: CMakeLists.txt  controller.cpp  pbot.urdf  sim_spring.cpp  simviz.cpp  simviz_spring.cpp  world.urdf  world_spring.urdf
00-1dof_passivity/data_logging/: logger.py  plotter.py
00-calibration_for_camera/: CMakeLists.txt  controller.cpp
00-contact_force_estimator/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  controller.cpp  panda_arm.urdf  simviz.cpp  world.urdf
00-experiment_joint_control/: CMakeLists.txt  controller.cpp  panda_arm.urdf
00-experiment_pose_control/: CMakeLists.txt  app_stiffness.cpp  controller.cpp  measure_robot_data.cpp  panda_arm_error.urdf  simviz.cpp  simviz_backup.cpp  world_backup.urdf
00-float_robot_and_allegro/: CMakeLists.txt  float_Bonnie_Allegro.cpp  float_Clyde_Allegro.cpp  panda_arm.urdf
00-force_sensor_calibration/: CMakeLists.txt  bias_Bonnie.cpp  bias_Clyde.cpp  example_parse_calibration.cpp  objectCalibration_Bonnie.cpp  objectCalibration_Clyde.cpp  simviz.cpp  world.urdf
00-force_sensor_calibration/calibration_files/: Bonnie_fsensor_bias.xml  Clyde_fsensor_bias.xml  ee_eraser.xml  ee_sphere.xml  friday0510.xml  friday0510.xml.xml  hand_brush.xml  hand_camera.xml.xml  test_sim_clyde.xml  wrench.xml
00-model_update_tests/: CMakeLists.txt  model_computation_speed.cpp
00-model_update_tests/data/: plotter_meas_robot_data.py
00-model_update_tests/models/: Allegrohand.urdf  humanoid.urdf  humanoid_hands.urdf  panda_arm.urdf  panda_arm_Allegrohand_new.urdf  two_pandas_mobile.urdf  two_pandas_mobile_hands.urdf
00-test_jacobians/: CMakeLists.txt  jacobian_singular_values.cpp  jacobians.cpp  panda_arm.urdf  panda_arm_hand.urdf  simviz.cpp  world.urdf
00-test_q_dq_ddq/: CMakeLists.txt  KalmanFilter.cpp  controller.cpp  panda_arm_hand.urdf  simviz.cpp  world.urdf
00-thesis_image_generation/: CMakeLists.txt  panda_arm.urdf  world_panda_contact.urdf  world_panda_joint_limit.urdf  world_panda_obstacle_avoidance.urdf  world_panda_redundancy.urdf
01-joint_hold_pos/: CMakeLists.txt  controller.cpp  panda_arm_hand.urdf  simviz.cpp  world.urdf
01-joint_motion/: CMakeLists.txt  controller.cpp
01bis-cartesian_hold_position/: CMakeLists.txt  controller.cpp  world.urdf
02-cartesian_motion/: CMakeLists.txt  controller.cpp  interface-02.html  panda_arm.urdf  panda_arm_hand.urdf  world.urdf
02-open_loop_force_control/: CMakeLists.txt  controller.cpp  world.urdf
03-control_under_collisions/: CMakeLists.txt  controller.cpp  panda_arm_hand.urdf  simviz.cpp  world.urdf
03-open_loop_force_control/: CMakeLists.txt  controller.cpp  panda_arm_hand.urdf  simviz.cpp  world.urdf
04-control_nullspace_collision/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
04-surface_alignment/: CMakeLists.txt  controller.cpp
05-contact_driven_demo/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
05-mvt_with_obstacles/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
06-pick_and_place/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
07-dual_arm_tray/: CMakeLists.txt  controller.cpp  panda_arm_hand.urdf  simviz.cpp  world.urdf
08-simulation_electric_cables/: CMakeLists.txt  controller.cpp  controller_margot.cpp  panda_no_truck.urdf  panda_no_truck_no_gripper.urdf  simviz.cpp  simviz_global.cpp  simviz_test.cpp  truck_panda.urdf  two_arm_panda.urdf  two_arm_panda_gripper.urdf  two_arm_panda_tool.urdf  world.urdf  world_backup.urdf  world_bis.urdf  world_global.urdf
09-haptic_painting/: CMakeLists.txt  controller.cpp  controller_backup.cpp  panda_arm_brush.urdf  panda_arm_hand.urdf  panda_arm_palette.urdf  simviz.cpp  world.urdf
10-construction_painting/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
10-test_passivity/: CMakeLists.txt  Clyde_fsensor_bias.xml  atigamma.xml  controller.cpp  panda_arm.urdf  simviz.cpp  world.urdf
11-metaGraspTesting/: CMakeLists.txt  controller.cpp  display_pose_ee.cpp  simviz.cpp
12-metaGraspTwoRobots/: CMakeLists.txt  calibrate_kuka_Bonnie.cpp  controller.cpp  iiwa7.urdf  joint_positions.txt
12-uniGrasp_allegro/: CMakeLists.txt  baseline.cpp  controller.cpp  display_pose_ee.cpp  floatingAllegroHand.urdf  panda_arm_AllegroHand.urdf  simviz.cpp  solveIKAllegro.cpp  world.urdf  world_IK.urdf
13-antenna_experiments/: CMakeLists.txt  display_ee_pose_in_kuka_frame.cpp  panda_arm.urdf
14-haptic_board_cleaning/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
15-bis-power_line_haptic_realistic_setup/: CMakeLists.txt  controller.cpp  world.urdf
15-power_line_haptic_experiment/: CMakeLists.txt  controller.cpp
16-haptic_cleaning_demo/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
17-autonomous_window_cleaning/: CMakeLists.txt  controller.cpp  panda_arm.urdf  simviz.cpp  world.urdf
18-haptic_local_force_loop/: CMakeLists.txt  ForceSpaceParticleFilter.cpp  ForceSpaceParticleFilter.h  ForceSpaceParticleFilter_weight_mem.cpp  ForceSpaceParticleFilter_weight_mem.h  app.cpp  app_new_fsensor.cpp  app_new_pf.cpp  controller.cpp  controller_panda.cpp  controller_panda_classical.cpp  controller_panda_loc_impedance.cpp  controller_panda_loc_unified.cpp  controller_sphere.cpp  panda_arm.urdf  simviz.cpp  simviz_panda.cpp  simviz_sphere.cpp  sphere.urdf  viz_panda.cpp  world.urdf  world_panda.urdf  world_particles.urdf
18-haptic_local_force_loop/data_logging/: plotter.py
19-bracing_one_arm/: CMakeLists.txt  MomentumObserver.cpp  app.cpp  panda_arm.urdf  world.urdf
19-bracing_one_arm/data_logging/: plotter.py
20-bracing_one_arm_floating_base/: CMakeLists.txt  MomentumObserver.h  app.cpp  controller.cpp  panda_arm.urdf
21-passivity_new_experiments/: CMakeLists.txt  controller.cpp  panda_arm.urdf  simviz.cpp  world.urdf
22-constraints_avoidance/: CMakeLists.txt  MomentumObserver.cpp  app.cpp  app_backup.cpp  panda_arm.urdf  simviz.cpp  world.urdf
Model/: panda_arm.urdf  world.urdf
demo-cs225a/: CMakeLists.txt  controller.cpp  simviz.cpp
(+35 files in other folders)
