# create an executable
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PANDA_APPLICATIONS_BINARY_DIR}/19-bracing_one_arm)
# ADD_EXECUTABLE (controller19 controller.cpp ${PANDA_APPLICATIONS_COMMON_SOURCE})
# ADD_EXECUTABLE (simviz19 simviz.cpp ${PANDA_APPLICATIONS_COMMON_SOURCE})
ADD_EXECUTABLE (app19 app.cpp ${PANDA_APPLICATIONS_COMMON_SOURCE} MomentumObserver.cpp)

# and link the library against the executable
# TARGET_LINK_LIBRARIES (controller19 ${PANDA_APPLICATIONS_COMMON_LIBRARIES})
# TARGET_LINK_LIBRARIES (simviz19 ${PANDA_APPLICATIONS_COMMON_LIBRARIES})
TARGET_LINK_LIBRARIES (app19 ${PANDA_APPLICATIONS_COMMON_LIBRARIES})

# export resources such as model files.
# NOTE: this requires an install build
SET(APP_RESOURCE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources)
FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
FILE(COPY world.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY panda_arm.urdf DESTINATION ${APP_RESOURCE_DIR})
